[package]
name = "arpscangui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34.0"
rand = "0.8.5"
lazy_static = "1.4.0"
slint = "1.7"  # Adding Slint for GUI
tokio = { version = "1.38", features = ["full"] }  # For async runtime
open = "5.3.0"

[build-dependencies]
slint-build = "1.10.0"

# No additional dependencies needed for build.rs

# Ensure the app can run on both Windows and Linux
[target.'cfg(windows)'.dependencies]
# No additional Windows-specific dependencies needed

[target.'cfg(unix)'.dependencies]
# No additional Unix-specific dependencies needed
